--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "watch": "webpack-dev-server --inline --hot",
     "dev": "webpack-dev-server --inline --hot | npm start",
-    "build": "webpack",
+    "build": "NODE_ENV=production webpack",
     "start": "/Applications/nwjs.app/Contents/MacOS/nwjs ."
   },
   "window": {
