--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "thefunc",
-  "nodejs": true,
-  "node-remote": "http://localhost",
-  "main": "index.html",
-  "node-main": "services/index.js",
-  "private": true,
   "scripts": {
-    "lint": "eslint ./ ./**/*.vue",
-    "watch": "webpack-dev-server --inline --hot",
-    "dev": "webpack-dev-server --inline --hot | npm start",
-    "build": "NODE_ENV=production webpack",
-    "start": "/Applications/nwjs.app/Contents/MacOS/nwjs ."
-  },
-  "window": {
-    "width": 1080,
-    "height": 800
-  },
-  "dependencies": {
-    "ace-builds": "^1.2.2",
-    "babel-runtime": "^5.8.0",
-    "codemirror": "^5.14.2",
-    "esprima": "^2.7.2",
-    "jquery": "^2.2.3",
-    "js-beautify": "^1.6.2",
-    "lodash": "^4.11.1",
-    "node-dir": "^0.1.11",
-    "vue": "^1.0.21",
-    "vuex": "^0.6.3"
+    "postinstall": "cd app && npm install",
+    "start": "node build/dev-runner.js",
+    "dev:server": "node build/dev-server.js",
+    "dev:client": "cross-env HOT=1 webpack --hide-modules --config build/webpack.dev-background.conf.js && cross-env HOT=1 electron",
+    "build": "rimraf dist && mkdirp dist && cross-env NODE_ENV=production webpack --progress --hide-modules --config build/webpack.prod.conf.js",
+    "package": "node build/package.js",
+    "package:osx": "node build/package.js --platform=darwin --arch=x64",
+    "package:win": "node build/package.js --platform=win32",
+    "package:linux": "node build/package.js --platform=linux",
+    "release": "npm run build && npm run package",
+    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -34,20 +20,59 @@
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
-    "cross-env": "^1.0.6",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.10.2",
-    "eslint-plugin-html": "^1.4.0",
-    "eslint-plugin-json": "^1.2.0",
+    "babel-runtime": "^6.0.0",
+    "chromedriver": "^2.21.2",
+    "connect-history-api-fallback": "^1.1.0",
+    "copy-webpack-plugin": "^1.1.1",
+    "cross-env": "1.0.7",
+    "cross-spawn": "^2.1.5",
+    "css-loader": "^0.23.0",
+    "debug-menu": "^0.3.0",
+    "electron-packager": "^7.0.0",
+    "electron-prebuilt": "1.1.0",
+    "electron-rebuild": "^1.1.3",
+    "eslint": "^2.0.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-friendly-formatter": "^1.2.2",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-html": "^1.3.0",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-standard": "^1.3.2",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.4",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.11.0",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
+    "jasmine-core": "^2.4.1",
     "json-loader": "^0.5.4",
-    "style-loader": "^0.13.1",
+    "karma": "^0.13.15",
+    "karma-coverage": "^0.5.5",
+    "karma-electron-launcher": "^0.1.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "^0.0.24",
+    "karma-webpack": "^1.7.0",
+    "mkdirp": "^0.5.1",
+    "moment": "2.12.0",
+    "ncp": "^2.0.0",
+    "nightwatch": "^0.8.18",
+    "phantomjs-prebuilt": "^2.1.3",
+    "rimraf": "^2.5.0",
+    "selenium-server": "2.52.0",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "1.3.2",
-    "vue-html-loader": "1.2.2",
-    "vue-loader": "8.2.3",
+    "vue": "^1.0.24",
+    "vue-hot-reload-api": "^1.3.2",
+    "vue-html-loader": "^1.2.2",
+    "vue-loader": "^8.3.1",
     "vue-style-loader": "^1.0.0",
-    "webpack": "1.13.0",
-    "webpack-dev-server": "1.14.1"
+    "vuex": "^0.6.3",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-externals-plugin": "1.0.0",
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-merge": "^0.8.3"
   }
 }
