added popup from semantic ui; moved jquery dependency from npm to regular script tag; basic popup is shown on function navigation page (static popup);

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,8 @@
     "browser": true,
     "commonjs": true,
     "es6": true,
-    "node": true
+    "node": true,
+    "jquery": true
   },
   "plugins": [
     "html"
@@ -28,6 +29,7 @@
     "semi": [
       "error",
       "always"
-    ]
+    ],
+    "no-console": 0
   }
 }
