--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "package:osx": "node build/package.js --platform=darwin --arch=x64",
     "package:win": "node build/package.js --platform=win32",
     "package:linux": "node build/package.js --platform=linux",
-    "release": "npm run build && npm run package",
+    "release": "npm run build && npm run package"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -18,7 +18,6 @@
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-runtime": "^6.0.0",
-    "chromedriver": "^2.21.2",
     "connect-history-api-fallback": "^1.1.0",
     "copy-webpack-plugin": "^1.1.1",
     "cross-env": "1.0.7",
@@ -42,23 +41,12 @@
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.11.0",
     "inject-loader": "^2.0.1",
-    "isparta-loader": "^2.0.0",
-    "jasmine-core": "^2.4.1",
     "json-loader": "^0.5.4",
-    "karma": "^0.13.15",
-    "karma-coverage": "^0.5.5",
-    "karma-electron-launcher": "^0.1.0",
-    "karma-jasmine": "^0.3.6",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "^0.0.24",
-    "karma-webpack": "^1.7.0",
+    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "moment": "2.12.0",
     "ncp": "^2.0.0",
-    "nightwatch": "^0.8.18",
-    "phantomjs-prebuilt": "^2.1.3",
     "rimraf": "^2.5.0",
-    "selenium-server": "2.52.0",
     "url-loader": "^0.5.7",
     "vue": "^1.0.24",
     "vue-hot-reload-api": "^1.3.2",
