added font-awesome; added directory-tree component, replacing old function navigation component; directory tree is built and then parsing is triggered correctly, however, parsing locks up the screen (will need to use another process); removed node-dir dependency; added file state enum (it's used for project state, so it might need renaming); scanner module updated to navigate directory tree instead of rescanning a given path;

--- a/app/package.json
+++ b/app/package.json
@@ -3,12 +3,10 @@
   "main": "background.js",
   "private": true,
   "dependencies": {
-    "ace-builds": "^1.2.2",
     "babel-runtime": "^5.8.0",
-    "codemirror": "^5.14.2",
     "esprima": "^2.7.2",
+    "font-awesome": "^4.6.3",
     "js-beautify": "^1.6.2",
-    "lodash": "^4.11.1",
-    "node-dir": "^0.1.12"
+    "lodash": "^4.11.1"
   }
 }
