--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "esprima": "^2.7.2",
     "font-awesome": "^4.6.3",
     "js-beautify": "^1.6.2",
-    "lodash": "^4.11.1"
+    "lodash": "^4.11.1",
+    "shortid": "^2.2.6"
   }
 }
