--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "main": "background.js",
   "private": true,
   "dependencies": {
-    "babel-runtime": "5.8.0",
+    "babel-runtime": "^5.8.0",
     "esprima": "2.7.2",
     "font-awesome": "4.6.3",
     "js-beautify": "1.6.2",
