--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "mkdirp": "^0.5.1",
     "moment": "2.12.0",
     "ncp": "^2.0.0",
+    "node-sass": "^3.8.0",
     "rimraf": "^2.5.0",
+    "sass-loader": "^4.0.0",
     "url-loader": "^0.5.7",
     "vue": "^1.0.24",
     "vue-hot-reload-api": "^1.3.2",
